# Knn

./: CMakeLists.txt  README.md
project/: algorithm_knn.cpp  functions_header.h  main.cpp  read_file.cpp  structures.h
